event controller fixed bug

--- a/Quiz_mkd/Areas/Admin/Views/Event/Edit.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Event/Edit.cshtml
@@ -12,6 +12,7 @@
         <form method="post" enctype="multipart/form-data">
             <input asp-for="Event.Id" type="hidden">
             <input asp-for="Event.ImageUrl" type="hidden" />
+            <input asp-for="Event.Destination" type="hidden" />
 @*             <input asp-for="Event.QuizId" type="hidden" />
  *@
             
