made some changes and added secret key for google sing in

--- a/Quiz_mkd/Areas/Admin/Views/Event/Delete.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Event/Delete.cshtml
@@ -54,7 +54,7 @@
                     <input disabled type="file" name="file" class="form-control" />
                     @if (!string.IsNullOrEmpty(Model.ImageUrl))
                     {
-                        <img src="@Model.ImageUrl" alt="Image" class="img-fluid w-25" />
+                        <img src="@Model.ImageUrl" alt="Image" class="img-fluid" style="max-height: 300px; object-fit: cover;padding: 20px" />
                     }
                 </div>
 
@@ -64,7 +64,7 @@
                     <div class="col-6 col-md-3">
                         <button type="submit" class="btn btn-primary form-control">Избриши</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 col-md-6">
                         <a asp-area="User" asp-controller="Event" asp-action="Index" class="btn btn-primary border form-control">Врати се назад</a>
                     </div>
                 </div>
