--- a/Quiz_mkd/Areas/User/Views/Quiz/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/Quiz/Index.cshtml
@@ -2,10 +2,10 @@
 
 
 
-<div class="quiz-container" style="padding=0;" >
-    <div id="naslov">
+<div class="quiz-container">
+    <div id="events-top">
         <div>
-            <h2 id="nalov-ass">Онлајн Квизови</h2>
+            <h2>Онлајн Квизови</h2>
         </div>
 
         @if (User.IsInRole(SD.Role_Admin))
