--- a/Quiz_mkd/Areas/Admin/Views/Event/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Event/Create.cshtml
@@ -34,13 +34,13 @@
 
                 <div class="mb-3 row p-1">
                     <label asp-for="Event.StartDate" class="p-0"></label>
-                    <input asp-for="Event.StartDate" class="form-control" />
+                    <input asp-for="Event.StartDate" value="" class="form-control" />
                     <span asp-validation-for="Event.StartDate" class="text-danger"></span>
                 </div>
 
                 <div class="mb-3 row p-1">
                     <label asp-for="Event.EndDate" class="p-0"></label>
-                    <input asp-for="Event.EndDate" class="form-control" />
+                    <input asp-for="Event.EndDate" value="" class="form-control" />
                     <span asp-validation-for="Event.EndDate" class="text-danger"></span>
                 </div>
 
@@ -51,7 +51,7 @@
                     <input type="file" name="file" class="form-control" />
                     @if (!string.IsNullOrEmpty(Model.Event.ImageUrl))
                     {
-                        <img src="@Model.Event.ImageUrl" alt="Image" class="img-fluid" />
+                        <img src="@Model.Event.ImageUrl" alt="Image" class="img-fluid" style="max-height: 300px; object-fit: cover;padding: 20px" />
                     }
                 </div>
 
@@ -62,7 +62,7 @@
                     <div class="col-6 col-md-3">
                         <button type="submit" class="btn btn-primary form-control">Зачувај</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 col-md-6">
                         <a asp-area="User" asp-controller="Event" asp-action="Index" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
