--- a/Quiz_mkd/Areas/Admin/Views/Event/Edit.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Event/Edit.cshtml
@@ -30,6 +30,12 @@
                     <span asp-validation-for="Event.Description" class="text-danger"></span>
                 </div>
 
+                <div class="mb-3 row p-1">
+                    <label asp-for="Event.Destination" class="p-0"></label>
+                    <input asp-for="Event.Destination" class="form-control" />
+                    <span asp-validation-for="Event.Destination" class="text-danger"></span>
+                </div>
+
 
                 <div class="mb-3 row p-1">
                     <label asp-for="Event.StartDate" class="p-0"></label>
@@ -47,11 +53,11 @@
 
 
                 <div class="mb-3 row p-1">
-                    <label asp-for="Event.ImageUrl" disabled class="p-0"></label>
+                    <label asp-for="Event.ImageUrl" disabled class="p-0">Прикачи слика</label>
                     <input type="file" name="file" class="form-control" />
                     @if (!string.IsNullOrEmpty(Model.Event.ImageUrl))
                     {
-                        <img src="@Model.Event.ImageUrl" alt="Image" class="img-fluid w-25" />
+                        <img src="@Model.Event.ImageUrl" alt="Image" class="image-fluid" style="max-height: 300px; object-fit: cover;padding: 20px" />
                     }
                 </div>
 
@@ -60,7 +66,7 @@
                     <div class="col-6 col-md-3">
                         <button type="submit" class="btn btn-primary form-control">Зачувај</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 col-md-6">
                         <a asp-area="User" asp-controller="Event" asp-action="Index" class="btn btn-primary  form-control">Врати се назад</a>
                     </div>
                 </div>
