--- a/Quiz_mkd/Areas/Admin/Views/Quiz/Delete.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/Delete.cshtml
@@ -28,17 +28,17 @@
                     <input disabled type="file" name="file" class="form-control" />
                     @if (!string.IsNullOrEmpty(Model.ImageUrl))
                     {
-                        <img src="@Model.ImageUrl" alt="Image" class="img-fluid" />
+                        <img src="@Model.ImageUrl" alt="Image" class="img-fluid" style="max-height: 300px; object-fit: cover;padding: 20px" />
                     }
                 </div>
 
         
 
                 <div class="row">
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 col-md-6">
                         <button type="submit" class="btn btn-primary form-control">Избриши</button>
                     </div>
-                    <div class="col-6 col-md-3">
+                    <div class="col-6 col-md-6">
                         <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
                 </div>
