added sign in with facebook and google

--- a/Quiz_mkd/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Quiz_mkd/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -14,8 +14,8 @@
     logging in.
 </p>
 
-<div class="row">
-    <div class="col-md-4">
+
+    <div id="registerForm">
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -23,10 +23,33 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.NameUser" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.NameUser">Enter Name</label>
+                <span asp-validation-for="Input.NameUser" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Surname" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.Surname">Enter Surname</label>
+                <span asp-validation-for="Input.Surname" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <input asp-for="Input.PlaceOfOrigin" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.PlaceOfOrigin">Enter City</label>
+                <span asp-validation-for="Input.PlaceOfOrigin" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating">
+                <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.PhoneNumber">Enter PhoneNumber</label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
             <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
-</div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
