handeled the access denied response for facebook login

--- a/Quiz_mkd/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Quiz_mkd/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -46,7 +46,7 @@
                 <label asp-for="Input.PhoneNumber">Enter PhoneNumber</label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary" style="margin-top:18px">Register</button>
         </form>
     </div>
 
